--- a/main.css
+++ b/main.css
@@ -32,6 +32,20 @@
   width: 100vw;
 }
 
+.hr3 {
+  border: 0 dotted;
+  height: 2px;
+  background-image: linear-gradient(to right, transparent, #CCC, transparent);  
+}
+
+.streaming-services {
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
 .social-media {
   margin: 1rem 0;
   display: flex;
