--- a/main.css
+++ b/main.css
@@ -11,11 +11,16 @@
   right: 0;
   width: 100vw;
   height: 80%;
-  background:rgba(0, 0, 0, 0.7); /*Shadowing*/
+  background: rgba(0, 0, 0, 0); /*Shadowing*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;  
+}
+
+.header-content:hover{
+    transition: 0.2s ease;
 }
 
 .nav-link:hover {
@@ -114,3 +119,4 @@
   margin-top: 5px;
 }
 
+a { text-indent:-9999px; }
