--- a/main.css
+++ b/main.css
@@ -119,3 +119,7 @@
   margin-top: 5px;
 }
 
+window.open(
+  'https://google.com',
+  '_blank' // <- This is what makes it open in a new window.
+);
