--- a/main.css
+++ b/main.css
@@ -119,7 +119,12 @@
   margin-top: 5px;
 }
 
-window.open(
+.vidBtn {
+  width: 240px;
+}
+
+
+/* window.open(
   'https://google.com',
   '_blank' // <- This is what makes it open in a new window.
-);
+); */
