--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+.navbar {
+  background-color: #740010!important;
+}
 #header {
   height: 90vh;
   display: flex;
@@ -125,11 +128,13 @@
   border-color: #740010;
 }
 
-.vidBtn.btn.btn-outline-secondary.btn-lga:active {
+.vidBtn:focus {
   background-color: #740010;
+  color: white;
 }
 .vidBtn:hover {
   background-color: #740010;
+  color: white;
 }
 
 .tourBtn {
