--- a/main.css
+++ b/main.css
@@ -21,12 +21,10 @@
 
 .hero {
   height: 130vh;
-  background: url("/assets/MF-3.jpg");
+  background: url("/assets/MF-3.jpg") no-repeat fixed;
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   -webkit-background-size: cover;
+  background-size: cover;
 }
 
 .hero nav a {
@@ -46,6 +44,9 @@
 }
 
 @media screen and (max-width: 425px) {
+  .hero {
+    background-attachment: scroll;
+  }
   .hero p {
     font-size: 32px;
   }
@@ -78,7 +79,6 @@
 
 .social-media li {
   list-style: none;
-  margin: 0 0.5rem;
   border-radius: 10px;
   background-color: transparent;
   padding: 0.5rem;
