--- a/main.css
+++ b/main.css
@@ -12,6 +12,13 @@
   font-family: LuloCleanBold;
   src: url(assets/Fonts/lulo-clean/Lulo\ Clean\ One\ Bold.otf);
 }
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
 
 .navbar {
   /* background-color: #740010!important; */
