--- a/main.css
+++ b/main.css
@@ -13,11 +13,11 @@
   src: url(assets/Fonts/lulo-clean/Lulo\ Clean\ One\ Bold.otf);
 }
 .rotate90 {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 .navbar {
@@ -77,6 +77,7 @@
   margin-right: 10px;
   border-radius: 10px;
 }
+
 .social-media {
   margin: 1rem 0;
   display: flex;
@@ -98,6 +99,29 @@
   width: 100%;
   height: 100%;
 }
+
+.social-media-h {
+  margin: 1rem 0;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.social-media-h li {
+  list-style: none;
+  border-radius: 10px;
+  background-color: transparent;
+  padding: 0.5rem;
+}
+
+.social-media-h li a {
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
 
 .scroll-down {
   padding: 0.5rem 0.75rem;
